[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/radial_background.png" type="Texture" id=1]
[ext_resource path="res://Upgrades/BulletTime/BulletTime.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 88.3629

[node name="BulletTime" type="Area2D"]
collision_layer = 0
collision_mask = 80
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.141176 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_BulletTime_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_BulletTime_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_BulletTime_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_BulletTime_body_exited"]
